--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,7 +3,8 @@ name: Integration Test
 on: 
   push:
     branches: [ main, develop ]   
-  pull_request:                
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   run-integration-tests:
